welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: type Yellow is not a member of object java.awt.Color
	(getCouleurSol():Color.Yellow);
                               ^